--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.1.0.RC1</spring.version>
+		<spring.version>3.1.0.RC2</spring.version>
 		<hera.version>0.6.0.RELEASE</hera.version>
 	</properties>
 
@@ -42,6 +42,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		
