Moved Hera property reference to Hera related parent project.

--- a/hera-sample/pom.xml
+++ b/hera-sample/pom.xml
@@ -23,6 +23,10 @@
 		<module>app</module>
 	</modules>
 	
+	<properties>
+		<hera.version>0.8.0.BUILD-SNAPSHOT</hera.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.synyx.hera</groupId>
