--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.1.0.RC2</spring.version>
+		<spring.version>3.1.0.RELEASE</spring.version>
 	</properties>
 
 	<developers>
