--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 
 	<properties>
 		<spring.version>3.1.0.RELEASE</spring.version>
+		<slf4j.version>1.6.1</slf4j.version>
+		<spring.data.commons.version>1.3.0.M1</spring.data.commons.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<developers>
@@ -61,6 +64,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
 
