--- a/hera-sample/options/pom.xml
+++ b/hera-sample/options/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.olivergierke.whoops</groupId>
-  			<artifactId>hera-equities</artifactId>
+  			<artifactId>hera-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
