--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.1.0.RELEASE</spring.version>
-		<slf4j.version>1.6.1</slf4j.version>
-		<spring.data.commons.version>1.3.0.M1</spring.data.commons.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
+		<slf4j.version>1.6.4</slf4j.version>
+		<spring.data.commons.version>1.3.0.RC1</spring.data.commons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
