--- a/plugins-sample/core/pom.xml
+++ b/plugins-sample/core/pom.xml
@@ -2,14 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <artifactId>hera-sample</artifactId>
+    <artifactId>plugins-sample</artifactId>
     <groupId>de.olivergierke.whoops</groupId>
     <version>1.0.0.BUILD-SNAPSHOT</version>
   </parent>
   
   <groupId>de.olivergierke.whoops</groupId>
-  <artifactId>hera-core</artifactId>
+  <artifactId>plugins-core</artifactId>
   
-  <name>Hera Sample Core</name>
+  <name>Plugins Sample - Core</name>
   
 </project>
