--- a/plugins-sample/equities/pom.xml
+++ b/plugins-sample/equities/pom.xml
@@ -3,20 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<artifactId>hera-sample</artifactId>
+		<artifactId>plugins-sample</artifactId>
 		<groupId>de.olivergierke.whoops</groupId>
 		<version>1.0.0.BUILD-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>de.olivergierke.whoops</groupId>
-	<artifactId>hera-equities</artifactId>
+	<artifactId>plugins-equities</artifactId>
 	
-	<name>Hera Sample Equities Plugin</name>
+	<name>Plugins Sample - Equities Plugin</name>
 	
 	<dependencies>
 		<dependency>
 			<groupId>de.olivergierke.whoops</groupId>
-  			<artifactId>hera-core</artifactId>
+  			<artifactId>plugins-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
