--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.1.1.RELEASE</spring.version>
-		<slf4j.version>1.6.6</slf4j.version>
-		<spring.data.commons.version>1.3.0.RC1</spring.data.commons.version>
+		<spring.version>3.1.2.RELEASE</spring.version>
+		<slf4j.version>1.7.1</slf4j.version>
+		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -127,8 +127,8 @@
 
 	<repositories>
 		<repository>
-			<id>spring-milestones</id>
-			<url>http://repo.springsource.org/libs-milestone</url>
+			<id>spring-snapshots</id>
+			<url>http://repo.springsource.org/libs-snapshot</url>
 		</repository>
 	</repositories>
 
