--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.2.0.RC1</spring.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
 		<slf4j.version>1.7.1</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
