--- a/packages-after/pom.xml
+++ b/packages-after/pom.xml
@@ -22,7 +22,7 @@
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-commons-core</artifactId>
+			<artifactId>spring-data-commons</artifactId>
 			<version>${spring.data.commons.version}</version>
 		</dependency>
 
