--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	</modules>
 
 	<properties>
-		<spring.version>3.2.2.RELEASE</spring.version>
-		<slf4j.version>1.7.1</slf4j.version>
-		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
+		<spring.version>4.1.0.RELEASE</spring.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<spring.data.commons.version>1.8.4.RELEASE</spring.data.commons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -58,24 +58,17 @@
 			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
-			<version>2.2</version>
-			<scope>runtime</scope>
-		</dependency>
 		
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>1.2.1</version>
+			<version>1.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
-			<version>4.10</version>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -108,17 +101,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.10</version>
-				<configuration>
-					<junitArtifactName>junit:junit-dep</junitArtifactName>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
