--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	</modules>
 
 	<properties>
-		<spring.version>4.1.0.RELEASE</spring.version>
-		<slf4j.version>1.7.7</slf4j.version>
-		<spring.data.commons.version>1.8.4.RELEASE</spring.data.commons.version>
+		<spring.version>4.3.3.RELEASE</spring.version>
+		<slf4j.version>1.7.21</slf4j.version>
+		<spring.data.commons.version>1.12.4.RELEASE</spring.data.commons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -28,8 +28,8 @@
 		<developer>
 			<id>ogierke</id>
 			<name>Oliver Gierke</name>
-			<organization>SpringSource, a division of VMware</organization>
-			<email>ogierke@vmware.com</email>
+			<organization>Pivotal Software, Inc.</organization>
+			<email>ogierke@pivotal.io</email>
 		</developer>
 	</developers>
 
@@ -58,7 +58,7 @@
 			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
@@ -68,27 +68,34 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.10</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.0.6</version>
+			<version>1.1.7</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -99,7 +106,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -111,7 +118,7 @@
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
-			<url>http://repo.springsource.org/libs-snapshot</url>
+			<url>https://repo.spring.io/libs-snapshot</url>
 		</repository>
 	</repositories>
 
